--- a/docs/pages/example.njk
+++ b/docs/pages/example.njk
@@ -21,11 +21,12 @@
         <path d="M197.6 73.2h-17.1v-5.5h3.8V51.9c0-3.7-.7-6.3-2.1-7.9-1.4-1.6-3.3-2.3-5.7-2.3-3.2 0-5.6 1.1-7.2 3.4s-2.4 4.6-2.5 6.9v15.6h6v5.5h-17.1v-5.5h3.8V51.9c0-3.8-.7-6.4-2.1-7.9-1.4-1.5-3.3-2.3-5.6-2.3-3.2 0-5.5 1.1-7.2 3.3-1.6 2.2-2.4 4.5-2.5 6.9v15.8h6.9v5.5h-20.2v-5.5h6V42.4h-6.1v-5.6h13.4v6.4c1.2-2.1 2.7-3.8 4.7-5.2 2-1.3 4.4-2 7.3-2s5.3.7 7.5 2.1c2.2 1.4 3.7 3.5 4.5 6.4 1.1-2.5 2.7-4.5 4.9-6.1s4.8-2.4 7.9-2.4c3.5 0 6.5 1.1 8.9 3.3s3.7 5.6 3.7 10.2v18.2h6.1v5.5zm42.5 0h-13.2V66c-1.2 2.2-2.8 4.1-4.9 5.6-2.1 1.6-4.8 2.4-8.3 2.4-4.8 0-8.7-1.6-11.6-4.9-2.9-3.2-4.3-7.7-4.3-13.3 0-5 1.3-9.6 4-13.7 2.6-4.1 6.9-6.2 12.8-6.2s9.8 2.2 12.3 6.5V22.7h-8.6v-5.6h15.8v50.6h6v5.5zm-13.3-16.8V52c-.1-3-1.2-5.5-3.2-7.3s-4.4-2.8-7.2-2.8c-3.6 0-6.3 1.3-8.2 3.9-1.9 2.6-2.8 5.8-2.8 9.6 0 4.1 1 7.3 3 9.5s4.5 3.3 7.4 3.3c3.2 0 5.8-1.3 7.8-3.8 2.1-2.6 3.1-5.3 3.2-8zm61.5 16.8H269v-5.5h6V51.9c0-3.7-.7-6.3-2.2-7.9-1.4-1.6-3.4-2.3-5.7-2.3-3.1 0-5.6 1-7.4 3s-2.8 4.4-2.9 7v15.9h6v5.5h-19.3v-5.5h6V42.4h-6.2v-5.6h13.6V43c2.6-4.6 6.8-6.9 12.7-6.9 3.6 0 6.7 1.1 9.2 3.3s3.7 5.6 3.7 10.2v18.2h6v5.4h-.2z"></path>
         <path d="M42 .2 13.4 92.3H1.7L30.2.2Zm10.4 0v92.1H42V.2Zm40.3 0L64.2 92.3H52.5L81 .2Zm10.4 0v92.1H92.7V.2Z"></path>
         <path d="M294 95h67v8.8h-67z" ></path>
-     </svg>
+    </svg>
 {% endset %}
 
 {% block content %}
-    <div class="js-example-links js-sticky df flex-nowrap sticky bg-white overflow-x-auto transition-medium z-1"
+    {# [mobile] Link to module examples #}
+    <div class="js-example-links js-sticky df dn-l flex-nowrap sticky bg-white overflow-x-auto transition-medium z-1"
         style="top: var(--header-height);">
         <a href="#top" class="link black p3 bl-between bb b--moon-gray nowrap">
             &uarr; <span class="sr-only">Scroll to top</span>
@@ -38,69 +39,79 @@
         {% endfor %}
     </div>
 
-    <div class="container center p2 p3-s">
-        <a class="js-close-examples dib link dark-blue hover-underline p3 pl0 mb3 cursor-pointer"
-            style="visibility: hidden;">
-            Close all examples
-        </a>
-        {% for module in modules %}
-            <div class="mt4-between">
-                <div id="{{ module.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
+    <div class="row">
+        <div class="dn db-l col-3 col-2-h">
+            {# [desktop] Link to module examples #}
+            <div class="js-example-links dif flex-column fixed top-0 vh-100 overflow-y-scroll">
+                <div style="padding-top: var(--header-height);"></div>
+                <a href="#top" class="link black p3 bt-between br b--moon-gray nowrap">
+                    &uarr; <span class="sr-only">Scroll to top</span>
+                </a>
 
-                <h2 class="f4 mv0">{{ module.name | replace('-', ' ') | title }}</h2>
+                {% for module in modules %}
+                    <a href="#{{ module.name }}" class="link black p3 bt-between br b--moon-gray nowrap">
+                        {{ module.name }}
+                    </a>
+                {% endfor %}
+            </div>
+        </div>
 
-                <details>
-                    <summary class="p3 cursor-pointer user-select-none" data-module="{{ module.name }}">
-                        More information
-                    </summary>
+        <div class="col-12 col-9-l p2 p3-s">
+            <a class="js-close-examples dib link dark-blue hover-underline p3 pl0 mb3 cursor-pointer"
+                style="visibility: hidden;">
+                Close all examples
+            </a>
+            {% for module in modules %}
+                <div class="mt4-between">
+                    <div id="{{ module.name }}" class="relative" style="bottom: var(--sticky-height, 76px);"></div>
 
-                    <ul class="mv4">
-                        <li>
-                            <a class="db link dark-blue hover-underline pv2"
-                                href="/list.html#{{ module.name }}">
-                                List of rules <span class="dn di-m">for module</span>
-                            </a>
-                        </li>
+                    <h2 class="f4 mv0">{{ module.name | replace('-', ' ') | title }}</h2>
 
-                        {% if module.name | isCssProperty %}
+                    <details>
+                        <summary class="p3 cursor-pointer user-select-none" data-module="{{ module.name }}">
+                            More information
+                        </summary>
+
+                        <ul class="mv4">
                             <li>
                                 <a class="db link dark-blue hover-underline pv2"
-                                    href="https://developer.mozilla.org/en-US/docs/Web/CSS/{{ module.name }}"
-                                    target="_blank"
-                                    rel="noreferrer nofollow">
-                                    <span class="dib svg-wrapper w-auto v-mid pr1">
-                                       {{ mdnIcon | safe }}
-                                    </span>
-                                    documentation
-                                    <span class="dn di-m">
-                                        on <code>{{ module.name }}</code>
-                                    </span>
-                                    {{ externalLinkIcon | safe }}
+                                    href="/list.html#{{ module.name }}">
+                                    List of rules <span class="dn di-m">for module</span>
                                 </a>
                             </li>
 
-                            {# W3Schools does not have normalized links to CSS properties #}
-                            {# <li>
-                                <a class="db link dark-blue hover-underline pv2"
-                                href="https://www.w3schools.com/cssref/css_pr_{{ module.name }}.php"
-                                target="_blank"
-                                rel="noreferrer nofollow">
-                                <span class="dn di-m">
-                                W3Schools documentation on <code>{{ module.name }}</code>
-                                </span>
-                                <span class="di dn-m">W3S documentation</span>
-                                {{ externalLinkIcon | safe }}
-                                </a>
-                                </li> #}
-                        {% endif %}
-                    </ul>
+                            {% if module.name | isCssProperty %}
+                                <li>
+                                    <a class="db link dark-blue hover-underline pv2"
+                                        href="https://developer.mozilla.org/en-US/docs/Web/CSS/{{ module.name }}"
+                                        target="_blank"
+                                        rel="noreferrer nofollow">
+                                        <span class="dib svg-wrapper w-auto v-mid pr1">
+                                            {{ mdnIcon | safe }}
+                                        </span>
+                                        documentation
+                                        <span class="dn di-m">
+                                            on <code>{{ module.name }}</code>
+                                        </span>
+                                        {{ externalLinkIcon | safe }}
+                                    </a>
+                                </li>
+                            {% endif %}
+                        </ul>
 
-                    {# add "ignore missing" to the end of include if necessary #}
-                    {% include 'docs/partials/examples/' + module.name + '.njk' %}
-                </details>
-            </div>
-        {% endfor %}
+                        {# add "ignore missing" to the end of include if necessary #}
+                        {% include 'docs/partials/examples/' + module.name + '.njk' %}
+                    </details>
+                </div>
+            {% endfor %}
+        </div>
     </div>
 
-   {% include 'docs/partials/highlight-js-styling.njk' %}
+    <style>
+        details[open] summary {
+            margin-bottom: 1rem;
+        }
+    </style>
+
+    {% include 'docs/partials/highlight-js-styling.njk' %}
 {% endblock %}
