--- a/docs/partials/highlight-js-styling.njk
+++ b/docs/partials/highlight-js-styling.njk
@@ -1,5 +1,20 @@
+{#
+    SPDX-FileCopyrightText: 2021 Cas Dijkman
+
+    SPDX-License-Identifier: GFDL-1.3-only
+#}
+
 <style>
-    /* https://github.com/highlightjs/highlight.js/blob/main/src/styles/vs.css */
+    /*
+       Visual Studio-like style based on original C# coloring by Jason Diamond <jason@diamond.name>
+
+       https://github.com/highlightjs/highlight.js/blob/main/src/styles/vs.css
+     */
+
+    .hljs {
+        /* background: white; */
+        color: black;
+    }
 
     .hljs-comment,
     .hljs-quote,
@@ -47,7 +62,6 @@
     .hljs-link {
         color: #00b0e8;
     }
-
 
     .hljs-emphasis {
         font-style: italic;
