--- a/docs/partials/order-table-styling.njk
+++ b/docs/partials/order-table-styling.njk
@@ -1,3 +1,9 @@
+{#
+    SPDX-FileCopyrightText: 2021 Cas Dijkman
+
+    SPDX-License-Identifier: GFDL-1.3-only
+#}
+
 <style>
     .js-order-table th::after {
         content: url("{{ "docs/icons/bootstrap/sort-alpha-up.svg" | imageToDataString('svg+xml') }}");
