--- a/docs/pages/example.njk
+++ b/docs/pages/example.njk
@@ -86,7 +86,7 @@
                                         href="https://developer.mozilla.org/en-US/docs/Web/CSS/{{ module.name }}"
                                         target="_blank"
                                         rel="noreferrer nofollow">
-                                        <span class="dib svg-wrapper w-auto v-mid pr1">
+                                        <span class="dib svg-wrapper v-mid pr1" style="width: 5rem;">
                                             {{ mdnIcon | safe }}
                                         </span>
                                         documentation
