Add titles to emojis on index.njk page

--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -92,13 +92,17 @@
                         download>
                         minified and gzipped
                     </a>
-                    but fully-equipped ⚒️
+                    but fully-equipped
+                    <span title="Toolbox">⚒️</span>
                 </div>
+
                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
                     <h3 class="mt0 f4">Responsive</h3>
-                    Responsive out-of-the-box, suitable for mobile-friendly designs 📱
+                    Responsive out-of-the-box, suitable for mobile-friendly designs
+                    <span title="Mobile phone">📱</span>
                 </div>
-                 <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
+
+                <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
                     <h3 class="mt0 f4">Free software</h3>
                     Source code is available on
                     <a class="link dark-blue hover-underline"
@@ -109,8 +113,10 @@
                     <a class="link dark-blue hover-underline"
                         href="https://www.gnu.org/licenses/gpl-3.0.en.html"
                         target="_blank"
-                        rel="noreferrer nofollow">GNU&nbsp;GPL&nbsp;v3</a> 👐
+                        rel="noreferrer nofollow">GNU&nbsp;GPL&nbsp;v3</a>
+                    <span title="Open hands">👐</span>
                  </div>
+
                  <div class="col-12 col-m col-3-l grow ba br3 b--black-20 p3">
                     <h3 class="mt0 f4">Customizable</h3>
                     Written in
@@ -118,7 +124,8 @@
                         href="https://sass-lang.com/"
                         target="_blank"
                         rel="noreferrer nofollow">SASS</a>,
-                    customizable and extensible to your heart's content ❤️
+                    customizable and extensible to your heart's content
+                    <span title="Heart">❤️</span>
                 </div>
             </div>
         </div>
