--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -130,6 +130,56 @@
             </div>
         </div>
 
+        {#
+            <h2 id="what-is-c4s">
+            What is C4S?
+            </h2>
+
+            exblain!
+        #}
+
+        <div class="row column-gap">
+            <div class="col-12 col-4-l col-6-h flex flex-column justify-center">
+                <div>
+                    <h2
+                        class="mt0"
+                        id="get-started"
+                    >
+                        Get started
+                    </h2>
+                    <p>
+                        Getting started is <em>very</em> easy.
+                    </p>
+                    <p>
+                        Follow the steps in the video and you'll be up-and-running in mere minutes 😀
+                    </p>
+                </div>
+            </div>
+            <div class="col-12 col-8-l col-6-h">
+                <video
+                    class="w-100 br3 mw7"
+                    poster="/docs/assets/screencasts/get-started-poster.png"
+                    controls
+                >
+                    <source
+                        src="/docs/assets/screencasts/get-started.webm"
+                        type="video/webm"
+                    />
+                    <source
+                        src="/docs/assets/screencasts/get-started.mp4"
+                        type="video/mp4"
+                    />
+                    <track
+                        label="English"
+                        kind="subtitles"
+                        srclang="en"
+                        src="/docs/assets/screencasts/get-started.en.vtt"
+                        default
+                    >
+                </video>
+            </div>
+        </div>
+
         <h2 id="documentation">
             Documentation
         </h2>
