--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -160,6 +160,7 @@
                     class="w-100 br3 mw7"
                     poster="/docs/assets/screencasts/get-started-poster.png"
                     controls
+                    muted
                 >
                     <source
                         src="/docs/assets/screencasts/get-started.webm"
@@ -170,7 +171,7 @@
                         type="video/mp4"
                     />
                     <track
-                        label="English"
+                        label="English commentary"
                         kind="subtitles"
                         srclang="en"
                         src="/docs/assets/screencasts/get-started.en.vtt"
