--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -199,9 +199,15 @@
         <div class="row column-gap row-gap">
             {% for file in files | rejectattr('isRaw') | mySelect('name', 'c4s') %}
                 <div class="dib bg-dark-blue br-pill grow">
-                    <a class="dib link ph4 pv3 nowrap white"
+                    <a
+                        class="dif items-center link ph4 pv3 nowrap white"
                         href="{{ file.file }}"
-                        download>
+                        download
+                    >
+                        <span class="svg-wrapper dib nt1 mr2">
+                            {% include "docs/icons/ionicons/download-outline.svg" %}
+                        </span>
+
                         Download C4S
 
                         {% if file.isMinified %}
@@ -212,9 +218,15 @@
             {% endfor %}
 
             <div class="dib bg-dark-blue br-pill grow">
-                <a class="dib link ph4 pv3 nowrap white"
+                <a
+                    class="dif items-center link ph4 pv3 nowrap white"
                     href="/custom.html"
-                    title="Select your own modules">
+                    title="Select your own modules"
+                >
+                    <span class="svg-wrapper dib nt1 mr2" style="fill: currentColor;">
+                        {% include "docs/icons/ionicons/create-outline.svg" %}
+                    </span>
+
                     Customize C4S
                 </a>
             </div>
