Add module for styling forms

--- a/docs/layouts/default.njk
+++ b/docs/layouts/default.njk
@@ -7,10 +7,10 @@
 <html class="overflow-x-hidden" lang="en">
     <head>
         <meta charset="utf-8">
-        <title>C4S CSS library documentation</title>
+        <title>C4S documentation</title>
         <meta name="description" content="{{ description }}">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="/c4s.css?v={{ VERSION | slug }}" rel="stylesheet">
+        <link href="/c4s-forms.css?v={{ VERSION | slug }}" rel="stylesheet">
         <script defer="defer" src="/js/main.js?v={{ VERSION | slug }}"></script>
     </head>
     <body class="sans-serif">
