--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -34,6 +34,7 @@ $breakpoints: map.remove($breakpoints-all, 'p');
 $modules: (
   'complex':                false,
   'reset':                  false,
+  // 'forms':               false,
   'miscellaneous':          false,
   'hover':                  false,
   'color':                  false,
