--- a/src/c4s-custom-verbose.scss
+++ b/src/c4s-custom-verbose.scss
@@ -37,6 +37,7 @@ $breakpoints: map.remove($breakpoints-all, 'p');
 $modules: (
   'complex':                false,
   'reset':                  false,
+  // 'forms':               false,
   'miscellaneous':          false,
   'hover':                  false,
   'color':                  false,
