Add .min extension to downloaded css file
Also improve styling on custom module finish page
And general refactoring the custom-modules script

--- a/docs/pages/custom.njk
+++ b/docs/pages/custom.njk
@@ -88,9 +88,10 @@
 
         <div class="tc">
             <div
-                class="js-custom-modules-output dib ph3 pv2 ba br2"
-                style="display: none;">
-                Generating custom modules
+                class="js-custom-modules-output dib ph3 pv2 ba br2 f4 lh-extra"
+                style="display: none;"
+            >
+                Generating custom modules...
 
                 <div class="spinner dib ml3 br-100 ba bw1 v-mid w1 h1">
                     <span class="sr-only">
