Update build pipeline to accomodate new min-height module

--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -78,6 +78,7 @@ $modules: (
   'max-width':              true,
   'height':                 true,
   'max-height':             true,
+  'min-height':             true,
   'position':               true,
   'coordinates':            true,
   'grid':                   true,
