--- a/src/c4s-custom-verbose.scss
+++ b/src/c4s-custom-verbose.scss
@@ -81,6 +81,7 @@ $modules: (
   'max-width':              true,
   'height':                 true,
   'max-height':             true,
+  'min-height':             true,
   'position':               true,
   'coordinates':            true,
   'grid':                   true,
