Add 'What is C4S' text and c4s-pro game to index.njk

--- a/docs/pages/index.njk
+++ b/docs/pages/index.njk
@@ -130,15 +130,50 @@
             </div>
         </div>
 
-        {#
+        <div class="measure-wide-l center mv5">
             <h2 id="what-is-c4s">
-            What is C4S?
+                What is C4S?
             </h2>
 
-            exblain!
-        #}
+            <p>
+                C4S is a CSS library that lets you write HTML the way you want and frees you from having to write (almost) any custom CSS.
 
-        <div class="row column-gap">
+                The library is based on the
+                <a
+                    href="https://mrmrs.cc/writing/scalable-css/"
+                    rel="noreferrer nofollow"
+                    class="link dark-blue hover-underline"
+                >
+                    functional CSS
+                </a>
+                philosophy, also known as
+                <a
+                    href="https://css-tricks.com/lets-define-exactly-atomic-css/"
+                    rel="noreferrer nofollow"
+                    class="link dark-blue hover-underline"
+                >
+                    atomic CSS</a>.
+                You can click the links to learn more.
+            </p>
+
+            <h2 id="c4s-pro">
+                Learn C4S
+            </h2>
+
+            <p>
+                Play
+                <a
+                    href="https://cdijkman.nl/apps/c4s-pro"
+                    rel="noreferrer nofollow"
+                    class="link dark-blue hover-underline"
+                >
+                    this game
+                </a>
+                to familiarize yourself with C4S class names using the spaced repetition learning technique 🤓
+            </p>
+         </div>
+
+        <div class="row column-gap mv5">
             <div class="col-12 col-4-l col-6-h flex flex-column justify-center">
                 <div>
                     <h2
