Update forms todo items

--- a/docs/pages/test.njk
+++ b/docs/pages/test.njk
@@ -65,7 +65,7 @@
                                 value="{{ value }}"
                                 {{ "checked" if loop.index0 === 0 }}
                             >
-                            <div class="ph3 pv2 nowrap hover-bg-black-05">
+                            <div class="ph2 ph3-m pv1 pv2-m nowrap hover-bg-black-05">
                                 <div class="button-lh-fix">
                                     {{ value }}
                                 </div>
